[chore] Setup webpack bundle tools

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,6 +66,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "resolveJsonModule": true
   },
+  "include": ["./src"],
   "exclude": ["node_modules", "./tests"],
   "compileOnSave": true
 }
