--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.2",
     "ts-node": "^8.3.0",
-    "typescript": "^3",
+    "typescript": "^3 || ^4",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
   }
