--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "prebundle": "yarn lint",
     "bundle": "webpack",
     "test": "jest",
-    "prepare": "NODE_ENV=production yarn bundle",
+    "prepare": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production yarn bundle",
     "demo": "ts-node --files ./demo/index.ts"
   },
   "devDependencies": {
@@ -45,13 +45,14 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
-    "jest": "^24.9.0",
+    "jest": "^25.5.4",
     "prettier": "^1.19.1",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^25.4.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.4",
-    "typescript": "^3 || ^4",
+    "typescript": "~4.6.4",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "cross-env": "^7.0.3"
   }
 }
