--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lib-arabic-chinese",
-  "version": "1.3.5",
+  "version": "2.0.0-rc.1",
   "description": "A library for converting from Arabic numbers to Chinese numbers",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
